[package]
name = "tmux-workspace"
version = "0.2.0"
edition = "2024"
description = "A small TOML-first tmux workspace launcher"
license = "MIT"
repository = "https://github.com/jdrp/tmux-workspace"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[[bin]]
name = "tw"
path = "src/main.rs"
